--- a/DesktopManager/MainWindow.xaml
+++ b/DesktopManager/MainWindow.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="Process Manager" Height="768" Width="1366">
 
-    
+    <Window.DataContext>
+        <local:Viewer/>
+    </Window.DataContext>
     
     <Grid>
         <Grid.ColumnDefinitions>
