--- a/DesktopManager/MainWindow.xaml
+++ b/DesktopManager/MainWindow.xaml
@@ -118,6 +118,16 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <Grid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50*" />
+                <ColumnDefinition Width="50*" />
+                <ColumnDefinition Width="50*" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="CPU Usage: XX%" VerticalAlignment="Center" FontSize="15"/>
+            <TextBlock Grid.Column="1" Text="Memory Usage: XX%" VerticalAlignment="Center" FontSize="15"/>
+            <TextBlock Grid.Column="2" Text="# of Processes: XXX" VerticalAlignment="Center" FontSize="15"/>
+        </Grid>
 
         <Grid Grid.Row="3" Grid.Column="4" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
