--- a/DesktopManager/MainWindow.xaml
+++ b/DesktopManager/MainWindow.xaml
@@ -87,11 +87,13 @@
                                 <ColumnDefinition Width="75"/>
                                 <ColumnDefinition Width="75"/>
                                 <ColumnDefinition Width="75"/>
+                                <ColumnDefinition Width="75"/>
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
-                            <Button Content="View" Grid.Column="0" Click="Button_Click_2" Background="White"/>
-                            <Button Content="Settings" Grid.Column="1" Click="Button_Click_1" Background="White"/>
-                            <Button Content="Help" Grid.Column="2" Click="Button_Click_3" Background="White"/>
+                            <Button Content="Home" Grid.Column="0" Background="White" IsEnabled="False"/>
+                            <Button Content="View" Grid.Column="1" Click="Button_Click_2" Background="White"/>
+                            <Button Content="Settings" Grid.Column="2" Click="Button_Click_1" Background="White"/>
+                            <Button Content="Help" Grid.Column="3" Click="Button_Click_3" Background="White"/>
                         </Grid>
                         <ScrollViewer>
                             <ItemsPresenter/>
