Added a setting file that will store the bindings for the isSelected for the combobox. Along with the bindings for the editable values. When clicking apply is checks the combobox for its selected index. #TODO make the IsSelected go off of bindings and finish apply.

--- a/DesktopManager/Settings.xaml
+++ b/DesktopManager/Settings.xaml
@@ -48,7 +48,7 @@
         </Grid>
         
         <Grid Grid.Row="2" Grid.Column="2">
-            <ComboBox Height="22">
+            <ComboBox Height="22" Name="MemoryViewSizeCombobox">
                 <ComboBoxItem Content="Auto" IsSelected="True"/>
                 <ComboBoxItem Content="MegaBytes"/>
                 <ComboBoxItem Content="KiloBytes"/>
@@ -61,7 +61,7 @@
         </Grid>
 
         <Grid Grid.Row="3" Grid.Column="2">
-            <ComboBox Height="22">
+            <ComboBox Height="22" Name="RefreshViewTimeCombobox">
                 <ComboBoxItem Content=".5"/>
                 <ComboBoxItem Content="1"/>
                 <ComboBoxItem Content="2"/>
