--- a/DesktopManager/Settings.xaml
+++ b/DesktopManager/Settings.xaml
@@ -20,6 +20,7 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
             <RowDefinition/>
             <RowDefinition Height="25"/>
             <RowDefinition Height="30"/>
@@ -70,7 +71,15 @@
             </ComboBox>
         </Grid>
 
-        <Grid Grid.Row="5" Grid.Column="4">
+        <Grid Grid.Row="4" Grid.Column="1">
+            <TextBlock Text="Show user:" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        </Grid>
+
+        <Grid Grid.Row="4" Grid.Column="2">
+            <CheckBox IsChecked="False" Name="ShowUserCheck" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,70,0"/>
+        </Grid>
+
+        <Grid Grid.Row="6" Grid.Column="4">
             <Button Content="Save" Height="25" Width="80" VerticalAlignment="Center" HorizontalAlignment="Center" Click="Button_Click_3"/>
         </Grid>
     </Grid>
