--- a/DesktopManager/MainWindow.xaml
+++ b/DesktopManager/MainWindow.xaml
@@ -97,7 +97,7 @@
                 <DataTemplate>
                     <Grid Margin="0,1">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="80*"/>
+                            <ColumnDefinition Width="80*" MaxWidth="310"/>
                             <ColumnDefinition Width="41*"/>
                             <ColumnDefinition Width="81*"/>
                             <ColumnDefinition Width="60*"/>
@@ -124,7 +124,7 @@
             <TextBlock Grid.Column="0" Text="CPU Usage:" VerticalAlignment="Center" FontSize="15"/>
             <TextBlock Grid.Column="1" Text="XX%" VerticalAlignment="Center" FontSize="15"/>
             <TextBlock Grid.Column="2" Text="Memory Usage:" VerticalAlignment="Center" FontSize="15"/>
-            <TextBlock Grid.Column="3" Text="XX%" VerticalAlignment="Center" FontSize="15"/>
+            <TextBlock Grid.Column="3" Text="{Binding UsedMemory}" VerticalAlignment="Center" FontSize="15"/>
             <TextBlock Grid.Column="4" Text="# of Processes: " VerticalAlignment="Center" FontSize="15"/>
             <TextBlock Grid.Column="5" Text="{Binding ProcessCount}" VerticalAlignment="Center" FontSize="15"/>
         </Grid>
