Now able to change priority of a process. #TODO Sort the process list.

--- a/DesktopManager/Help.xaml
+++ b/DesktopManager/Help.xaml
@@ -38,6 +38,6 @@
         </Grid>
         <TextBlock Text="About:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Margin="50,0" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2"/>
         <TextBlock Text="Version:" FontSize="12" VerticalAlignment="Center" Margin="50,0" Grid.Column="0" Grid.Row="2"/>
-        <TextBlock Text="9.2020.03" Grid.Column="1" Grid.Row="2" FontSize="12" VerticalAlignment="Center"/>
+        <TextBlock  Name="Version"  Text="" Grid.Column="1" Grid.Row="2" FontSize="12" VerticalAlignment="Center"/>
     </Grid>
 </Window>
