Added more info to MoreProcessInformation. #TODO add a scroll bar to MoreProcessInformation for all information. #Can't find a way to refresh the main window to continually display correct memory usage and number of processes.

--- a/DesktopManager/MoreProcessInformation.xaml
+++ b/DesktopManager/MoreProcessInformation.xaml
@@ -23,6 +23,8 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
             <RowDefinition/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
@@ -34,6 +36,9 @@
             </Grid.ColumnDefinitions>
             <Button Content="Exit" Background="White" Click="Button_Click"/>
         </Grid>
+        <ScrollViewer Grid.Row="1" Grid.ColumnSpan="4" Grid.RowSpan="11">
+            
+        </ScrollViewer>
         <Grid Grid.Row="1" Grid.Column="1">
             <TextBlock Text="Process:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="0" Grid.Row="1"/>
         </Grid>
@@ -45,15 +50,26 @@
         <TextBlock Text="Run Time:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3"/>
         <TextBlock Grid.Row="3" Grid.Column="2" Name="RunTime" Text="" VerticalAlignment="Center" FontSize="16"/>
 
-        <TextBlock Text="Memory:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="4"/>
-        <TextBlock Grid.Row="4" Grid.Column="2" Name="Memory" Text="" VerticalAlignment="Center" FontSize="16"/>
+        <TextBlock Text="Start Time:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="4"/>
+        <TextBlock Grid.Row="4" Grid.Column="2" Name="processStartTime" Text="" VerticalAlignment="Center" FontSize="16"/>
 
-        <TextBlock Text="User:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="5"/>
-        <TextBlock Grid.Row="5" Grid.Column="2" Name="User" Text="" VerticalAlignment="Center" FontSize="16"/>
+        <TextBlock Text="Memory:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="5"/>
+        <TextBlock Grid.Row="5" Grid.Column="2" Name="Memory" Text="" VerticalAlignment="Center" FontSize="16"/>
 
-        <TextBlock Text="Priority:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="6"/>
-        <ComboBox Name="PriorityCombo" Grid.Row="6" Grid.Column="2" Width="120" Height="24" HorizontalAlignment="Left"/>
+        <TextBlock Text="NonPaged:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="6"/>
+        <TextBlock Grid.Row="6" Grid.Column="2" Name="NonPageMemory" Text="" VerticalAlignment="Center" FontSize="16"/>
 
+        <TextBlock Text="Virtual:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="7"/>
+        <TextBlock Grid.Row="7" Grid.Column="2" Name="VirtualMemory" Text="" VerticalAlignment="Center" FontSize="16"/>
+
+        <TextBlock Text="User:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="8"/>
+        <TextBlock Grid.Row="8" Grid.Column="2" Name="User" Text="" VerticalAlignment="Center" FontSize="16"/>
+
+        <TextBlock Text="Priority:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="9"/>
+        <ComboBox Name="PriorityCombo" Grid.Row="9" Grid.Column="2" Width="120" Height="24" HorizontalAlignment="Left"/>
+
+        <TextBlock Text="Threads:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="10"/>
+        <TextBlock Grid.Row="10" Grid.Column="2" Name="Threads" Text="" VerticalAlignment="Center" FontSize="16"/>
 
     </Grid>
 </Window>
